@@ -1,7 +1,7 @@
 package co.edu.sena.Clinica.el.Rosal.Service;
 
-
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -16,35 +16,34 @@ public class CitaMedicaService {
     @Autowired
     private CitaMedicaRepository repository;
 
-    // Guardar nueva cita médica
-    public void save(CitaMedicaDTO dto){
+    // Guardar una nueva cita médica
+    public void save(CitaMedicaDTO dto) {
         CitaMedicaEntity entity = CitaMedicaEntity.builder()
-            .idPaciente(dto.getIdPaciente())
-            .idMedico(dto.getIdMedico())
-            .fecha(dto.getFecha())
-            .hora(dto.getHora())
-            .estado(dto.getEstado())
-            .idEspecialidad(dto.getIdEspecialidad())
-            .build();
+                .idPaciente(dto.getIdPaciente())
+                .idMedico(dto.getIdMedico())
+                .fecha(dto.getFecha())
+                .hora(dto.getHora())
+                .estado(dto.getEstado())
+                .idEspecialidad(dto.getIdEspecialidad())
+                .build();
 
         repository.save(entity);
     }
 
-    // Obtener todas las citas
+    // Obtener todas las citas médicas registradas
     public List<CitaMedicaDTO> getAll() {
         return repository.findAll().stream().map(entity -> CitaMedicaDTO.builder()
-            .id(entity.getId())
-            .idPaciente(entity.getIdPaciente())
-            .idMedico(entity.getIdMedico())
-            .fecha(entity.getFecha())
-            .hora(entity.getHora())
-            .estado(entity.getEstado())
-            .idEspecialidad(entity.getIdEspecialidad())
-            .build()
-        ).toList();
+                .id(entity.getId())
+                .idPaciente(entity.getIdPaciente())
+                .idMedico(entity.getIdMedico())
+                .fecha(entity.getFecha())
+                .hora(entity.getHora())
+                .estado(entity.getEstado())
+                .idEspecialidad(entity.getIdEspecialidad())
+                .build()).collect(Collectors.toList());
     }
 
-    // Eliminar cita por ID
+    // Eliminar una cita médica por su ID
     public void delete(Long id) {
         repository.deleteById(id);
     }
