@@ -1,6 +1,8 @@
 package co.edu.sena.Clinica.el.Rosal.Service;
 
 import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -15,29 +17,37 @@ public class DepartamentoService {
     @Autowired
     private DepartamentoRepository repository;
 
-    // Guardar un nuevo departamento
+    // Crear o actualizar un departamento
     public void save(DepartamentoDTO dto) {
-        // Convertimos DTO a entidad para guardar en la BD
         DepartamentoEntity entity = DepartamentoEntity.builder()
-            .nombreDepartamento(dto.getNombre())
-            .build();
+                .id(dto.getId()) // Permite actualización si se pasa un ID
+                .nombreDepartamento(dto.getNombreDepartamento())
+                .build();
 
-        repository.save(entity);
+        repository.save(entity); // Si el ID ya existe, actualiza
     }
 
     // Obtener todos los departamentos
     public List<DepartamentoDTO> getAll() {
-        // Convertimos la lista de entidades a DTOs
-        return repository.findAll().stream().map(entity ->
-            DepartamentoDTO.builder()
-                .id(entity.getId())
-                .nombre(entity.getNombreDepartamento())
-                .build()
-        ).toList();
+        return repository.findAll().stream()
+                .map(entity -> DepartamentoDTO.builder()
+                        .id(entity.getId())
+                        .nombreDepartamento(entity.getNombreDepartamento())
+                        .build())
+                .collect(Collectors.toList());
     }
 
-    // Eliminar un departamento por ID
+    // Eliminar por ID
     public void delete(Long id) {
         repository.deleteById(id);
+    }
+
+    // Obtener un departamento por ID (opcional, útil para ediciones)
+    public Optional<DepartamentoDTO> getById(Long id) {
+        return repository.findById(id)
+                .map(entity -> DepartamentoDTO.builder()
+                        .id(entity.getId())
+                        .nombreDepartamento(entity.getNombreDepartamento())
+                        .build());
     }
 }
